--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="# sito dedicato alla pedagogia"><span class="octicon octicon-link"></span></a>sito dedicato alla pedagogia.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Ho voluto dedicare il sito alla grandissima Maria Montessori perchè per me e penso per tantissime persone ha cambiato la Storia della pedagogia:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
