--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@ Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 <iframe width="560" height="315" src="//www.youtube.com/embed/Ib1vALZrqm0" frameborder="0" allowfullscreen></iframe>
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
+<p> questo video è molto carino guardatelo parla dell' importanza del metodo montessoriano.</p>
+<img src=" http://upload.wikimedia.org/wikipedia/it/6/6b/Mont5.jpg"
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
@@ -103,7 +103,7 @@ Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-
+< a href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="new un film bellissimo</a>
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
