--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale
 <iframe width="560" height="315" src="//www.youtube.com/embed/Ib1vALZrqm0" frameborder="0" allowfullscreen></iframe>
 <p> questo video è molto carino guardatelo parla dell' importanza del metodo montessoriano.</p>
 <img src=" http://upload.wikimedia.org/wikipedia/it/6/6b/Mont5.jpg"
-<h3>Pensiero pedagogico[modifica | modifica sorgente]
-Exquisite-kfind.png	Per approfondire, vedi Metodo Montessori.
-Il metodo montessoriano parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
+<h3>Pensiero pedagogico
+.
+<br>Il metodo montessoriano parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
 
 Il principio fondamentale deve essere la libertà dell'allievo, poiché solo la libertà favorisce la creatività del bambino già presente nella sua natura. Dalla libertà deve emergere la disciplina.
 
@@ -102,7 +102,7 @@ Montessori sviluppò tutto il suo pensiero pedagogico partendo da una costruttiv
 
 Maria Montessori definisce il bambino come un embrione spirituale nel quale lo sviluppo psichico si associa allo sviluppo biologico. Nello sviluppo psichico sono presenti dei periodi sensitivi, definiti nebule, cioè periodi specifici in cui si sviluppano particolari capacità.
 
-La casa dei bambini[modifica | modifica sorgente]
+La casa dei bambini
 
 
 La scuola Montessori dell'Aia, la prima ad essere stata aperta in Olanda
