--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@ La casa dei bambini
 La scuola Montessori dell'Aia, la prima ad essere stata aperta in Olanda
 Nel 1907 fonda a Roma la prima casa dei bambini, destinata non più ai bambini portatori di handicap ma ai figli degli abitanti del quartiere San Lorenzo. Si tratta di una casa speciale, non costruita per i bambini ma è una casa dei bambini. È ordinata in maniera tale che i bambini la sentano veramente come loro.[13]
 
-L'intero arredamento della casa è progettato e proporzionato alle possibilità del bambino. In questo ambiente il bambino interagisce attivamente con il materiale proposto, mostrandosi concentrato, creativo e volenteroso. Il bambino trova un ambiente per potersi esprimere in maniera originale e allo stesso tempo apprende gli aspetti fondamentali della vita comunitaria. Essenziale è la partecipazione dei genitori per la cura della salute e dell'igiene come prerequisito per la scuola. Il compito dell'insegnante è l'organizzazione dell'ambiente. Deve attendere che i bambini si concentrino su un determinato materiale, per poi dedicarsi all'osservazione dei comportamenti individuali. L'insegnante aiuta il bambino, lo sviluppo del quale deve compiersi secondo i ritmi naturali e in base alla personalità che il bambino dimostra.
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-<p> push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+L'intero arredamento della casa è progettato e proporzionato alle possibilità del bambino. In questo ambiente il bambino interagisce attivamente con il materiale proposto, mostrandosi concentrato, creativo e volenteroso. Il bambino trova un ambiente per potersi esprimere in maniera originale e allo stesso tempo apprende gli aspetti fondamentali della vita comunitaria. Essenziale è la partecipazione dei genitori per la cura della salute e dell'igiene come prerequisito per la scuola. Il compito dell'insegnante è l'organizzazione dell'ambiente. Deve attendere che i bambini si concentrino su un determinato materiale, per poi dedicarsi all'osservazione dei comportamenti individuali. L'insegnante aiuta il bambino, lo sviluppo del quale deve compiersi secondo i ritmi naturali e in base alla personalità che il bambino dimostra</p>
 
 <h3>
 <style>
@@ -124,7 +122,7 @@ L'intero arredamento della casa è progettato e proporzionato alle possibilità 
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-< a href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="new un film bellissimo</a>
+<a> href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="new un film bellissimo</a>
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
