--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
 
-  <body> style="background-color:pink">
+  <body> 
+  <style="background-color:pink"/>
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
 
