--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </head>
 
   <body>
+   { background-color: pink;
+     }
   <style="background-color:violet"/>
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
