--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </script>
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
-
+   <style>
   <body>
-   { background-color: pink;
+      { background-color: pink;
      }
-  <style="background-color:violet"/>
+  <style/>
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
 
