--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ L'intero arredamento della casa è progettato e proporzionato alle possibilità 
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-<a> href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="new un film bellissimo</a>
+<a> href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="www.fiction.mediaset.it/maria-montessori/stagione-1/target</a>
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
