--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p><br><font color"violet" biografia </font>
-  
-</br>: Maria Montessori nasce a Chiaravalle il 31 Agosto 1870 è stata una pedagogista, filosofa, medico, scienziata, educatrice e volontaria italiana, nota per il metodo che prende il suo nome, usato in migliaia di scuole materne, elementari, medie e superiori in tutto il mondo.Figlia di Alessandro Montessori, emiliano, e di Renilde Stoppani, marchigiana, Maria nacque in un'abitazione al civico 10 di Piazza Mazzini a Chiaravalle, a pochi chilometri da Ancona. I genitori erano persone istruite e sensibili alle nuove idee politiche che parlavano di unità italiana[2].
+<p><br><font color"violet" biografia </font></br>: Maria Montessori nasce a Chiaravalle il 31 Agosto 1870 è stata una pedagogista, filosofa, medico, scienziata, educatrice e volontaria italiana, nota per il metodo che prende il suo nome, usato in migliaia di scuole materne, elementari, medie e superiori in tutto il mondo.Figlia di Alessandro Montessori, emiliano, e di Renilde Stoppani, marchigiana, Maria nacque in un'abitazione al civico 10 di Piazza Mazzini a Chiaravalle, a pochi chilometri da Ancona. I genitori erano persone istruite e sensibili alle nuove idee politiche che parlavano di unità italiana[2].
 
 Il padre Alessandro era nato a Ferrara e dopo aver lavorato come impiegato di concetto nelle saline di Comacchio, negli anni settanta era stato trasferito a Chiaravalle per un lavoro di controllo. È in questo luogo che incontrò la donna con la quale poi si sarebbe sposato, Renilde Stoppani. Nei suoi scritti il padre ci dà preziose informazioni sulla crescita e sullo sviluppo di Maria.
 
