--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   
   <body style="
-  backgrond-color: violet;
+  backgrond-color: yellow;
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
