--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale
 <iframe width="560" height="315" src="//www.youtube.com/embed/Ib1vALZrqm0" frameborder="0" allowfullscreen></iframe>
 <p> questo video è molto carino guardatelo parla dell' importanza del metodo montessoriano.</p>
 <img src=" http://upload.wikimedia.org/wikipedia/it/6/6b/Mont5.jpg"
-<h3>Pensiero pedagogico
+<h3> il Pensiero pedagogico
 .
 <br>Il metodo montessoriano parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
 
@@ -113,6 +113,7 @@ Nel 1907 fonda a Roma la prima casa dei bambini, destinata non più ai bambini p
 L'intero arredamento della casa è progettato e proporzionato alle possibilità del bambino. In questo ambiente il bambino interagisce attivamente con il materiale proposto, mostrandosi concentrato, creativo e volenteroso. Il bambino trova un ambiente per potersi esprimere in maniera originale e allo stesso tempo apprende gli aspetti fondamentali della vita comunitaria. Essenziale è la partecipazione dei genitori per la cura della salute e dell'igiene come prerequisito per la scuola. Il compito dell'insegnante è l'organizzazione dell'ambiente. Deve attendere che i bambini si concentrino su un determinato materiale, per poi dedicarsi all'osservazione dei comportamenti individuali. L'insegnante aiuta il bambino, lo sviluppo del quale deve compiersi secondo i ritmi naturali e in base alla personalità che il bambino dimostra</p>
 
 <h3>
+<a href="http://www.raiscuola.rai.it/articoli/la-casa-dei-bambini-di-maria-montessori/3894/default.aspx">External Link</a>
 <style>
  
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
