--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <section id="downloads">
         <span class="inner">
           <a href="https://github.com/carla-soro/scienze-pedagogiche/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/carla-soro/scienze-pedagogiche/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Send email</a>
         </span>
       </section>
 
