--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <style type="text/css">
+    my-id { color: pink }
+    my-class { color: violet }
+    </style>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640" />
 
