--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
 
-<p><br> {color: violet}BIOGRAFIA </br> : Maria Montessori nasce a Chiaravalle il 31 Agosto 1870 è stata una pedagogista, filosofa, medico, scienziata, educatrice e volontaria italiana, nota per il metodo che prende il suo nome, usato in migliaia di scuole materne, elementari, medie e superiori in tutto il mondo.Figlia di Alessandro Montessori, emiliano, e di Renilde Stoppani, marchigiana, Maria nacque in un'abitazione al civico 10 di Piazza Mazzini a Chiaravalle, a pochi chilometri da Ancona.<BR> I genitori erano persone istruite e sensibili alle nuove idee politiche che parlavano di unità italiana[2].</BR>
+<p><br> BIOGRAFIA </br> : Maria Montessori nasce a Chiaravalle il 31 Agosto 1870 è stata una pedagogista, filosofa, medico, scienziata, educatrice e volontaria italiana, nota per il metodo che prende il suo nome, usato in migliaia di scuole materne, elementari, medie e superiori in tutto il mondo.Figlia di Alessandro Montessori, emiliano, e di Renilde Stoppani, marchigiana, Maria nacque in un'abitazione al civico 10 di Piazza Mazzini a Chiaravalle, a pochi chilometri da Ancona.<BR> I genitori erano persone istruite e sensibili alle nuove idee politiche che parlavano di unità italiana[2].</BR>
 
 </BR>Il padre Alessandro era nato a Ferrara e dopo aver lavorato come impiegato di concetto nelle saline di Comacchio, negli anni settanta era stato trasferito a Chiaravalle per un lavoro di controllo. È in questo luogo che incontrò la donna con la quale poi si sarebbe sposato, Renilde Stoppani. </BR> <BR> Nei suoi scritti il padre ci dà preziose informazioni sulla crescita e sullo sviluppo di Maria.
 
@@ -76,7 +76,7 @@ Fin dai primi anni di studio questa colta ragazza manifesta interesse per le mat
 
 Maria è una studentessa molto capace, tanto che vincerà un premio di mille lire dalla Fondazione Rolli per un lavoro in patologia generale. Nel 1895 Maria vince un posto di "aggiunto in medicina" degli ospedali con il diritto di entrare nella Società Lancisiana riservata ai dottori e professori degli ospedali di Roma. Il suo curriculum risulta eccellente in igiene, psichiatria, e pediatria materie che saranno alla base delle sue future scelte. Negli anni che precedono la laurea i suoi impegni di studio si orienteranno sempre più verso ricerche di tipo sperimentale in laboratorio e di osservazione nelle sale del manicomio dell'ospedale di Santa Maria della Pietà di Monte Mario (Roma). Durante la preparazione della sua tesi frequenta le lezioni di Antropologia fisica (o biologica) tenute da Giuseppe Sergi. La tesi che discuterà il 10 luglio del 1896 è a carattere sperimentale quasi cento pagine scritte a mano che portano il titolo "Contributo clinico allo studio delle allucinazioni a contenuto antagonistico" (pp. 33–37).
 
-Scelte e percorso lavorativo[modifica | modifica sorgente]
+Scelte e percorso lavorativo
 Ottiene la nomina di assistente presso la clinica psichiatrica dell'Università di Roma, in collaborazione con Giuseppe Ferruccio Montesano (con cui ha un sodalizio professionale e affettivo), dedicandosi al recupero dei bambini e delle bambine con problemi psichici, da lei definiti anormali. Il lavoro in clinica la porta ad entrare materialmente in contatto con gli ambienti scientifici di Inghilterra e Francia. Nasce così il suo interesse per la letteratura scientifica francese del primo Ottocento a proposito dei casi di fanciulli selvaggi, allevati da animali, ritrovati in zone isolate nel corso del Settecento e per gli esperimenti rieducativi tentati da Jean Marc Itard (1765-1835).
 
 
@@ -105,7 +105,7 @@ Montessori sviluppò tutto il suo pensiero pedagogico partendo da una costruttiv
 
 Maria Montessori definisce il bambino come un embrione spirituale nel quale lo sviluppo psichico si associa allo sviluppo biologico. Nello sviluppo psichico sono presenti dei periodi sensitivi, definiti nebule, cioè periodi specifici in cui si sviluppano particolari capacità.
 
-La casa dei bambini
+La casa dei bambini.
 
 
 La scuola Montessori dell'Aia, la prima ad essere stata aperta in Olanda
