--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   
   <body style="
-  backgrond-color: yellow;
+  backgrond-color: violet;
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
@@ -115,6 +115,8 @@ L'intero arredamento della casa è progettato e proporzionato alle possibilità 
 
 <h3>
 <a href="http://www.raiscuola.rai.it/articoli/la-casa-dei-bambini-di-maria-montessori/3894/default.aspx">External Link</a>
+<a href="http://http://www.operanazionalemontessori.it/index.php?option=com_content&task=section&id=5&Itemid=32">External Link</a>
+
 <style>
  
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
