--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
   
-  <body style="
+  <body>
+  <style="
   backgrond-color: violet;
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
