--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
   
-  <body>
-  <style="
+  <body><style="
   backgrond-color: violet;
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
@@ -92,7 +91,7 @@ Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale
 <img src=" http://upload.wikimedia.org/wikipedia/it/6/6b/Mont5.jpg"
 <h3> il Pensiero pedagogico
 .
-<br>Il metodo montessoriano parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
+< IL METODO MONTESSORIANO </br> il metodomontessoriano  parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
 
 Il principio fondamentale deve essere la libertà dell'allievo, poiché solo la libertà favorisce la creatività del bambino già presente nella sua natura. Dalla libertà deve emergere la disciplina.
 
