--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
   
-  <body><style="
-  backgrond-color: violet;
+  <body>
+  <style="
+  backgrond-A355B3;
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
