--- a/index.html
+++ b/index.html
@@ -21,9 +21,131 @@
   </head>
   
   <body>
-  <style="
-  backgrond-A355B3;
-  ">
+  <style=" backgrond-a355b3;="" "="" style="
+    background: pink;
+">
+    <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
+    <div class="shell">
+
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>la grande maria montessori</h1>
+            <h2> la pedagogia  e i8l metodo della montessori</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/carla-soro/scienze-pedagogiche/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/carla-soro/scienze-pedagogiche/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://mail.google.com/mail/u/0/?tab=wm#inbox">Send email</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <h3 class="header-level-1">
+<a name="welcome-to-github-pages" class="anchor" href="# sito dedicato alla pedagogia"><span class="octicon octicon-link"></span></a>sito dedicato alla pedagogia.</h3>
+<iframe width="560" height="315" src="//www.youtube.com/embed/fGw7Nzm80XA" frameborder="0" allowfullscreen=""></iframe>
+<p>
+ http://www.evergreen-montessori.com/assets/images/drmontessori.jpg
+ Ho voluto dedicare il sito alla grandissima Maria Montessori perchè per me e penso per tantissime persone ha cambiato la Storia della pedagogia:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p><br> BIOGRAFIA <br> : Maria Montessori nasce a Chiaravalle il 31 Agosto 1870 è stata una pedagogista, filosofa, medico, scienziata, educatrice e volontaria italiana, nota per il metodo che prende il suo nome, usato in migliaia di scuole materne, elementari, medie e superiori in tutto il mondo.Figlia di Alessandro Montessori, emiliano, e di Renilde Stoppani, marchigiana, Maria nacque in un'abitazione al civico 10 di Piazza Mazzini a Chiaravalle, a pochi chilometri da Ancona.<br> I genitori erano persone istruite e sensibili alle nuove idee politiche che parlavano di unità italiana[2].<br>
+
+<br>Il padre Alessandro era nato a Ferrara e dopo aver lavorato come impiegato di concetto nelle saline di Comacchio, negli anni settanta era stato trasferito a Chiaravalle per un lavoro di controllo. È in questo luogo che incontrò la donna con la quale poi si sarebbe sposato, Renilde Stoppani. <br> <br> Nei suoi scritti il padre ci dà preziose informazioni sulla crescita e sullo sviluppo di Maria.
+
+<br>Maria Montessori a dieci anni
+La madre Renilde (1840-1912) era originaria di Monte San Vito, paese nelle vicinanze di Chiaravalle, e proveniva da una famiglia di piccoli proprietari terrieri; era una donna istruita e amava molto la lettura[3][4]. Come il padre anche lei era cattolica, con una spiccata simpatia per gli ideali risorgimentali. Tramite la madre, Maria era nipote di Antonio Stoppani, abate e naturalista, ancor oggi celebre per essere stato autore del fortunato volume Il Bel Paese.<br> <br> Lo Stoppani era una figura importante del cattolicesimo rosminiano[5] ed essendo abate e insieme scienziato mostrava con la sua stessa vita la possibilità della coesistenza armonica tra fede e ragione[6]. La giovane Maria Montessori ebbe nell'abate Stoppani un punto di riferimento[5] e nella madre un costante sostegno alle sue idee innovative e alle sue scelte di vita insolite per l'epoca, anche in contrasto con un certo conservatorismo del padre[7][8].<br>
+
+Nel febbraio del 1873 Alessandro venne trasferito a Firenze dove rimarrà con la famiglia per due anni. Pochi anni dopo la famiglia affrontò un altro trasferimento: a Roma, divenuta da poco capitale; Maria venne iscritta alla scuola preparatoria comunale di Rio Ponte. Fin da piccola Maria si era dimostrata vivace. Gli studi elementari non erano stati molto brillanti, a causa di problemi di salute tra cui una lunga rosolia.<br> Studiò francese e pianoforte, che abbandonò presto. Verso gli undici anni cominciò ad appassionarsi agli studi<br>. La sua passione giovanile era l'arte drammatica. Eccellente in italiano, presentava però lacune in grammatica e matematica. Nel febbraio del 1884 si era aperta a Roma una scuola governativa femminile: la "Regia scuola tecnica" (oggi Istituto Tecnico “Leonardo Da Vinci”, in via degli Annibaldi). La fondazione di questa scuola rientrava nel piano di politica scolastica dell'Italia post-unitaria. Maria fu tra le prime dieci alunne e si diplomò con 137/160.[1]
+<br>Scelta e percorso universitario.<br>
+Fin dai primi anni di studio questa colta ragazza manifesta interesse per le materie scientifiche, soprattutto matematica e biologia, una circostanza che le causerà contrasti con i genitori, i quali avrebbero voluto avviarla alla carriera di insegnante. In un'intervista della stessa Montessori a New York apparsa sul Globe dichiara di aver dovuto chiedere l'aiuto a papa Leone XIII per il suo ingresso alla facoltà in quanto ostacolata dal ministro Baccelli. Si iscrive alla Facoltà di Medicina dell'Università "La Sapienza" di Roma, dove sarà la prima donna a laurearsi in medicina (nel 1896) dopo l'unità d'Italia.<br> Maria si dedica con passione e metodo alla ricerca in laboratorio. Oltre ai corsi di batteriologia e microscopia segue il corso di ingegneria sperimentale. Studia anche pediatria all'Ospedale dei bambini, le malattie delle donne, nei reparti del San Giovanni (Roma), e quelle degli uomini al Santo Spirito (Roma) (due ospedali ancora attivi).
+
+Maria è una studentessa molto capace, tanto che vincerà un premio di mille lire dalla Fondazione Rolli per un lavoro in patologia generale. Nel 1895 Maria vince un posto di "aggiunto in medicina" degli ospedali con il diritto di entrare nella Società Lancisiana riservata ai dottori e professori degli ospedali di Roma. Il suo curriculum risulta eccellente in igiene, psichiatria, e pediatria materie che saranno alla base delle sue future scelte. <br> Negli anni che precedono la laurea i suoi impegni di studio si orienteranno sempre più verso ricerche di tipo sperimentale in laboratorio e di osservazione nelle sale del manicomio dell'ospedale di Santa Maria della Pietà di Monte Mario (Roma). Durante la preparazione della sua tesi frequenta le lezioni di Antropologia fisica (o biologica) tenute da Giuseppe Sergi. La tesi che discuterà il 10 luglio del 1896 è a carattere sperimentale quasi cento pagine scritte a mano che portano il titolo "Contributo clinico allo studio delle allucinazioni a contenuto antagonistico" (pp. 33–37).
+
+Scelte e percorso lavorativo
+Ottiene la nomina di assistente presso la clinica psichiatrica dell'Università di Roma, in collaborazione con Giuseppe Ferruccio Montesano (con cui ha un sodalizio professionale e affettivo), dedicandosi al recupero dei bambini e delle bambine con problemi psichici, da lei definiti anormali. <br>Il lavoro in clinica la porta ad entrare materialmente in contatto con gli ambienti scientifici di Inghilterra e Francia. Nasce così il suo interesse per la letteratura scientifica francese del primo Ottocento a proposito dei casi di fanciulli selvaggi, allevati da animali, ritrovati in zone isolate nel corso del Settecento e per gli esperimenti rieducativi tentati da Jean Marc Itard (1765-1835).
+
+
+
+Maria Montessori a quarantatré anni
+Attira inoltre la sua attenzione il lavoro svolto da Itard e il suo collaboratore, Edouard Seguin (1812-1880), riguardo alla possibilità di inserimento nella comunità dei bambini e delle bambine anormali, attraverso un percorso di educazione adeguato.<br> Proprio la partecipazione a numerosi convegni pedagogici, in varie città europee, le permetterà di entrare in contatto con la scuola di Itard e Seguin e di apprendere i loro metodi sperimentali di rieducazione dei minorati mentali. <br>Contribuisce con il suo impegno all'emancipazione femminile. Partecipa al Congresso Femminile di Berlino nel 1896 in veste di rappresentante dell'Italia. È rimasto famoso un suo intervento in tale sede sul diritto alla parità salariale tra donne e uomini<br>. Partecipa anche al successivo Congresso Femminile di Londra (1899). Nel 1898 presenta a Torino, al congresso pedagogico, i risultati delle sue prime ricerche e dopo breve tempo, diventa direttrice della scuola magistrale ortofrenica di Roma. Con lo spostamento dei suoi interessi sul lato dell'educazione, decide di rinnovare le sue basi culturali laureandosi in filosofia.<br> Nel 1903 viene nominata Medico Assistente di II Classe nei ruoli del Personale Direttivo della Croce Rossa Italiana con un grado militare assimilabile a quello di Sottotenente, a disposizione per i servizi degli Ospedali Territoriali della C.R.I.[9] Nel 1904 consegue la libera docenza in antropologia ed ha dunque l'opportunità di occuparsi dell'organizzazione educativa degli asili infantili. A tal fine, nel 1907, a San Lorenzo, apre la prima Casa dei Bambini, in cui applica una nuova concezione di scuola d'infanzia: Il metodo della pedagogia scientifica, volume scritto e pubblicato a Città di Castello (Perugia) durante il primo corso di specializzazione (1909). Il testo viene tradotto e accolto in tutto il mondo con grande entusiasmo. Al suo arrivo negli Stati Uniti, nel 1913, il New York Tribune la presentò come the most interesting woman of Europe (la donna più interessante d'Europa). Da quel momento, il suo metodo avrebbe riscosso un buon interesse nel Nord America, col tempo poi affievolitosi, fino al ritorno in auge sostenuto da Nancy McCormick Rambusch, fondatrice, nel 1960, della Società Montessori Americana<br>.
+
+Dal successo dell'esperimento romano nasce il movimento montessoriano, dal quale nel 1924 avrà origine la scuola magistrale Montessori e l'"opera Nazionale Montessori", eretta, quest'ultima, in Ente morale e volta alla conoscenza, alla diffusione, all'attuazione e alla tutela del suo metodo. Maria Montessori ne diviene Presidente onoraria.. <br></p>
+
+<h3 class="header-level-1">
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<iframe width="560" height="315" src="//www.youtube.com/embed/Ib1vALZrqm0" frameborder="0" allowfullscreen=""></iframe>
+<p> questo video è molto carino guardatelo parla dell' importanza del metodo montessoriano.</p>
+<img src=" http://upload.wikimedia.org/wikipedia/it/6/6b/Mont5.jpg" <h3=""> il Pensiero pedagogico
+.
+&lt; IL METODO MONTESSORIANO <br> il metodomontessoriano  parte dallo studio dei bambini e delle bambine con problemi psichici, espandendosi allo studio dell'educazione per tutti i bambini. La Montessori stessa sosteneva che il metodo applicato su persone subnormali aveva effetti stimolanti anche se applicato all'educazione di bambini normali. Il suo pensiero identifica il bambino come essere completo, capace di sviluppare energie creative e possessore di disposizioni morali (come l'amore), che l'adulto ha ormai compresso dentro di sé rendendole inattive.
+
+Il principio fondamentale deve essere la libertà dell'allievo, poiché solo la libertà favorisce la creatività del bambino già presente nella sua natura. Dalla libertà deve emergere la disciplina.
+
+Per Maria Montessori la disciplina deriva dal lavoro libero, questa nasce solo quando nel bambino emerge l'interesse autentico, ossia quando egli sceglie il lavoro assecondando il proprio istinto, capace di procurare uno stato di raccoglimento assoluto. Compito dell'insegnante sarà lavorare al mantenimento di questo stato tramite l'educazione al movimento. Secondo Maria Montessori è proprio il movimento a giocare un ruolo centrale, poiché la personalità si forma con il crescere all'unisono di facoltà psichiche e facoltà motorie. È quando il bambino impara a muoversi seguendo uno scopo che sia connesso con l'attività psichica che saprà dirigere la propria volontà; solo allora sarà disciplinato. Per questo motivo il lavoro nelle Case dei Bambini è basato sul movimento; entrando in un ambiente costruito a sua misura, con materiali ideati per l'utilizzo autonomo dalla stessa Montessori, il bambino può scegliere la propria attività, seguendo l'istinto, svegliando l'interesse e la concentrazione. Un bambino concentrato non è ancora un bambino disciplinato perché un bambino disciplinato è capace di orientare la propria volontà al raggiungimento di un fine. La volontà si rinforza e si sviluppa con esercizi metodici. L'insegnante aiuterà il bambino in questo processo con attività previste dal metodo chiamate lezioni di silenzio nelle quali egli sperimenterà l'immobilità perfetta, l'attenzione nel percepire il suono del proprio nome pronunciato da lontano, movimenti leggeri coordinati allo scopo di non urtare oggetti. Solamente quando il bambino sarà in grado di orientare la propria volontà ad un fine, saprà obbedire ed essere quindi disciplinato. L'adulto, dice la Montessori, quando richiede la disciplina e l'obbedienza al bambino trascura quasi sempre la volontà di questo, gli propone un modello da imitare: «fai come faccio io!»; oppure un comando diretto: «stai fermo!», «stai zitto!». Bisogna domandarsi: «come può il bambino scegliere di obbedire se ancora non ha sviluppato la volontà?». La risposta è contenuta in questo nodo teorico districato dalla Montessori: dalla libertà alla disciplina.[12]
+
+Un individuo disciplinato è capace di regolarsi da solo quando sarà necessario seguire delle regole di vita. Il periodo infantile è un periodo di enorme creatività, è una fase della vita in cui la mente del bambino assorbe le caratteristiche dell'ambiente circostante facendole proprie, crescendo per mezzo di esse, in modo naturale e spontaneo, senza dover compiere alcuno sforzo cognitivo. Con la Montessori molte regole dell'educazione consolidate nei primi anni del secolo cambiarono. I bambini subnormali venivano trattati con rispetto, venivano organizzate per loro delle attività didattiche. I bambini dovevano imparare a prendersi cura di sé stessi e venivano incoraggiati a prendere decisioni autonome.
+
+Montessori sviluppò tutto il suo pensiero pedagogico partendo da una costruttiva critica della psicologia scientifica, corrente di pensiero affermatasi nei primi anni del secolo. L'equivoco di base della psicologia scientifica era da ricercare nella sua illusione di fondo, secondo la quale erano sufficienti una osservazione pura e semplice e una misurazione scientifica per creare una scuola nuova, rinnovata ed efficiente. Il pensiero pedagogico montessoriano riparte dalla pedagogia scientifica. Infatti l'introduzione della scienza nel campo dell'educazione è il primo passo fondamentale per poter costruire un'osservazione obiettiva dell'oggetto. L'oggetto dell'osservazione non è il bambino in sé, ma la scoperta del bambino nella sua spontaneità ed autenticità. Infine, della scuola tradizionale infantile Maria Montessori critica il fatto che, in essa, tutto l'ambiente sia pensato a misura di adulto. In un ambiente così concepito, il bambino non si trova a suo agio e quindi nelle condizioni per poter agire spontaneamente.
+
+Maria Montessori definisce il bambino come un embrione spirituale nel quale lo sviluppo psichico si associa allo sviluppo biologico. Nello sviluppo psichico sono presenti dei periodi sensitivi, definiti nebule, cioè periodi specifici in cui si sviluppano particolari capacità.
+
+La casa dei bambini.
+
+
+La scuola Montessori dell'Aia, la prima ad essere stata aperta in Olanda
+Nel 1907 fonda a Roma la prima casa dei bambini, destinata non più ai bambini portatori di handicap ma ai figli degli abitanti del quartiere San Lorenzo. Si tratta di una casa speciale, non costruita per i bambini ma è una casa dei bambini. È ordinata in maniera tale che i bambini la sentano veramente come loro.[13]
+
+L'intero arredamento della casa è progettato e proporzionato alle possibilità del bambino. In questo ambiente il bambino interagisce attivamente con il materiale proposto, mostrandosi concentrato, creativo e volenteroso. Il bambino trova un ambiente per potersi esprimere in maniera originale e allo stesso tempo apprende gli aspetti fondamentali della vita comunitaria. Essenziale è la partecipazione dei genitori per la cura della salute e dell'igiene come prerequisito per la scuola. Il compito dell'insegnante è l'organizzazione dell'ambiente. Deve attendere che i bambini si concentrino su un determinato materiale, per poi dedicarsi all'osservazione dei comportamenti individuali. L'insegnante aiuta il bambino, lo sviluppo del quale deve compiersi secondo i ritmi naturali e in base alla personalità che il bambino dimostra<p></p>
+
+<h3 class="header-level-1">
+<a href="http://www.raiscuola.rai.it/articoli/la-casa-dei-bambini-di-maria-montessori/3894/default.aspx">External Link</a>
+<a href="http://http://www.operanazionalemontessori.it/index.php?option=com_content&amp;task=section&amp;id=5&amp;Itemid=32">External Link</a>
+
+<style>
+ 
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+<a> href="http://www.fiction.mediaset.it/maria-montessori/stagione-1/target="www.fiction.mediaset.it/maria-montessori/stagione-1/target</a>
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/carla-soro">carla-soro</a> can be found on <a href="https://github.com/carla-soro/scienze-pedagogiche">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
+    </div>
+
+    
+  </body>
+</html>
+</style></h3></section></div></style=">
+  
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
 
