--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   
   <body>
-  <style=" backgrond-pink;="" "="" style=
+  <style="background-color: rgb(228, 100, 53);="" "="" style=
   ">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
