--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     <title>Scienze-pedagogiche by carla-soro</title>
   </head>
   
-  <body>
-  <style="background-color: rgb(228, 100, 53);="" "="" style=
-  ">
+  <body <style="background-color:violet ; style=">
     <a id="forkme_banner" href="https://github.com/carla-soro/scienze-pedagogiche">View on GitHub</a>
     <div class="shell">
 
