--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <iframe width="560" height="315" src="//www.youtube.com/embed/fGw7Nzm80XA" frameborder="0" allowfullscreen=""></iframe>
 <p>
  http://www.evergreen-montessori.com/assets/images/drmontessori.jpg
- Ho voluto dedicare il sito alla grandissima Maria Montessori perchè per me e penso per tantissime persone ha cambiato la Storia della pedagogia:</p>
+<br> Ho voluto dedicare il sito alla grandissima Maria Montessori perchè per me e penso per tantissime persone ha cambiato la Storia della pedagogia:</br></p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
